@@ -259,6 +259,7 @@ assign-ext-dyn:				unconformable
 assign-disk-from:			unconformable
 vsam-status:				unconformable
 self-call-recursive:		skip
+record-contains-depending-clause:	unconformable
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		COBOL2014
