@@ -279,6 +279,7 @@ assign-ext-dyn:				ok
 assign-disk-from:			ok
 vsam-status:				ignore
 self-call-recursive:		warning
+record-contains-depending-clause:	unconformable
 
 # use complete word list; synonyms and exceptions are specified below
 reserved-words:		default
