@@ -262,6 +262,7 @@ assign-ext-dyn:				ok
 assign-disk-from:			ok
 vsam-status:				ignore
 self-call-recursive:		skip
+record-contains-depending-clause:	unconformable
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		MF
