@@ -258,6 +258,7 @@ assign-ext-dyn:				unconformable
 assign-disk-from:			unconformable
 vsam-status:				ok
 self-call-recursive:		skip
+record-contains-depending-clause:	unconformable
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		MVS
