@@ -526,6 +526,7 @@ test.conf: missing definitions:
 	no definition of 'assign-disk-from'
 	no definition of 'vsam-status'
 	no definition of 'self-call-recursive'
+	no definition of 'record-contains-depending-clause'
 ])
 
 AT_CLEANUP
