@@ -17,6 +17,11 @@
 	* gcos-strict.conf, gcos.conf, gcos.words: added config files for
 	  GCOS 7 (Bull) dialect
 
+2022-02-07  David Declerck <david.declerck@ocamlpro.com>
+
+	* general: add a record-contains-depending-clause option to allow
+	  configuring the support of the DEPENDING clause in RECORD CONTAINS
+
 2021-11-14  Ron Norman <rjn@inglenet.com>
 
 	* mf.words: Add MF specific names B-EXOR, B-LEFT, B-RIGHT for bit
